feature(main): implement tracking of the character count of the limited text area

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     </head>
     <body>
         <div class="text-area-wrapper">
-            <textarea class="text-area">Start typing ...</textarea>
-            <div class="word-count-wrapper">
-                <span>0/0</span>
+            <textarea class="text-area" maxlength="250" placeholder="Start typing ..."></textarea>
+            <div class="character-count-wrapper">
+                <span class="character-count">0/250</span>
             </div>
         </div>
+        <script src="js/script.js"></script>
     </body>
 </html>
